infra/service.yml
apiVersion: v1
kind: Service
metadata:
  name: pr-preview-test
spec:
  selector:
    app: pr-preview-test
  ports:
  - port: 80
    targetPort: web
