infra/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pr-preview-test-route
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: sadcloud
  hostnames:
    - prpt.byhe.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: pr-preview-test
          port: 80
